# LBD_OBJ_Exporter

./: README.md  pyproject.toml  requirements.txt
examples/: two_boxes.ttl
lbd_obj_exporter/: __init__.py  app.py  obj_exporter.py
tests/: test_obj_exporter.py
